@@ -1,18 +1,0 @@
-##
-## schema file for Unix Quotas
-## Schema for storing Unix Quotas in LDAP
-## OIDs are owned by Cogent Innovators, LLC
-##
-## 1.3.6.1.4.1.19937.1.1.x - attributetypes
-## 1.3.6.1.4.1.19937.1.2.x - objectclasses
-##
-
-attributetype ( 1.3.6.1.4.1.19937.1.1.1 NAME 'quota'
-	DESC 'Quotas (FileSystem:BlocksSoft,BlocksHard,InodesSoft,InodesHard)'
-	EQUALITY caseIgnoreIA5Match
-	SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{255} )
-
-objectclass ( 1.3.6.1.4.1.19937.1.2.1 NAME 'systemQuotas' SUP posixAccount AUXILIARY
-	DESC 'System Quotas'
-	MUST ( uid )
-	MAY  ( quota ))
