@@ -1,3 +1,5 @@
+HEAD
+	+ Fix regression that caused incompatibility between samba and mail modules
 2.0.8
 	+ Bug fix: Home directory is mapped when accessing from a Windows 7 client
 	+ User quotas are now stored in configuration backup and users directory
